# bevy-mesh-obj

./: .gitignore  Cargo.toml  README.md
assets/: wall_with_door_gap.blend
src/: error.rs  lib.rs  macros.rs  main.rs  obj.rs
src/tests/: macros_test.rs  mod.rs  obj_test.rs
