[package]
name = "bevy-mesh-obj"
version = "0.1.0"
edition = "2021"
description = "Parse Wavefront .obj files into Bevy Meshes"
keywords = ["bevy", "wavefront", ".obj", "gamedev"]
categories = ["game-development"]
license = "MIT"
repository = "https://github.com/EricFrancis12/bevy-mesh-obj"
homepage = "https://github.com/EricFrancis12/bevy-mesh-obj"
readme = "README.md"
exclude = ["assets/*"]

[dependencies]
bevy = "0.14.0"
thiserror = "2.0.6"
